# wc

./: README.md  pyproject.toml
src/mwc/: __main__.py  cli.py  mwc.py
src/wc/: __init__.py
